# ondevice-foundation-models

./: .gitignore  LICENSE  NOTICE  README.md  pipeline.py  pyproject.toml
backends/: __init__.py
backends/qnn/: __init__.py  convert.py  device.py  htp_config.py  inputs.py  profile.py  tools.py
benchmarks/: results.csv
common/: __init__.py  logging.py  onnx_io.py  subprocess.py
converters/: __init__.py
converters/depth_anything_3/: __init__.py  export.py
graph_rewriters/: __init__.py  base.py  optimize.py  simplify.py
graph_rewriters/depth_anything_3/: __init__.py  feature_layout.py  fold_mul.py  head_linear.py  head_split.py  pre_qkv_explode.py
models/depth-anything-3/: README.md  model.yaml
